[tool.poetry]
name = "janny"
version = "0.1.0"
description = "Delete Kubernetes resources after a set time"
authors = ["Anirudh Oppiliappan <x@icyphox.sh>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
